2004-07-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.4.2 from emacs-w3m-1_4 branch.

	* w3m.el (w3m-w3m-canonicalize-url): Revival.
	(w3m-w3m-attributes, w3m-w3m-retrieve): Call the above.
	(w3m-canonicalize-url): Do not check a slash.

2004-07-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-detect-meta-charset): Check that a content field has
	a valid value before parsing it.

2004-07-08  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
	Suggested by Tatsuya Kinoshita <tats@vega.ocn.ne.jp>

	* w3m.el (w3m-correct-charset-alist): Reverse "windows-125x" and
	"cp125x".

2004-07-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.4.1 from emacs-w3m-1_4 branch.

2004-07-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-weather.el: Reconstructed to follow the change of site
	design.
	(w3m-weather-completion-table, w3m-weather-filter-functions):
	Update.
	(w3m-weather-extract-contents, w3m-weather-adjust-contents): New
	functions.
	(w3m-weather-remove-headers, w3m-weather-remove-footers,
	w3m-weather-get-seikatu-sisu, w3m-weather-insert-seikatu-sisu):
	Removed.

2004-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add the
	nankyoku-people group.

2004-06-27  Yoshitaka Taki  <taki@tawagoto.org>

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Improve
	regexp for pc, akiba, game and av groups.
	(shimbun-index-url): Don't add an excessive slash.
	(shimbun-get-headers): Use shimbun-create-header instead of
	shimbun-make-header; don't encode subject string.

	* shimbun/sb-itmedia.el (shimbun-itmedia-content-start): Don't
	declare it since it has never been used.
	(shimbun-itmedia-content-end): Ditto.
	(shimbun-itmedia-expiration-days): Don't declare it.
	(shimbun-get-headers): Use shimbun-create-header instead of
	shimbun-make-header; don't encode subject string; remove a relic
	lingered when it was sb-zdnet.el.